--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Russo+One&display=swap"
     rel="stylesheet">
-  <title>Boxit</title>
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
+  <title>BoxLit</title>
 </head>
 
 <body>
